# kubevirt

./: .gitignore  Makefile  WORKSPACE  custom-repo.yaml  demo_hypervisor_metrics.go  hack.sh  kubvirt.yaml  kvm-kubeconfig  setupcustomrpm.sh  test-hyperv-slim.xml  test-mshv.xml  test-tcg.xml  test.sh  test.xml  test2.xml  testvm.yaml  testvm2.yaml
.github/workflows/: build-images.yaml  build-libvirt-rpms.yaml  build-qemu-rpm.yaml  cicd.yaml  deploy.yaml  pr.yaml  republish-builder-image-copy.yaml  republish-builder-image.yaml  republish-kubevirt-builder.yaml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-task-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: plan-template.md
api/openapi-spec/: swagger.json
automation/: test.sh
cmd/virt-handler/: virt-handler.go
cmd/virt-launcher/: BUILD.bazel  virt-launcher.go
docs/: hyperv-l1vh.md  mshv-memory-management-analysis.md
docs/observability/: metrics.md
hack/: bazel-build-images.sh  bootstrap.sh  dockerized  generate.sh  retry-functests.sh  rpm-deps.sh  setup-custom-rpms.sh
hack/linter/: lint-paths.txt
hack/qemu-mshv/: build-libvirt-rpms.sh  build-qemu-rpms.sh  build-rpms-http-image.sh  setup-custom-libvirt-qemu-rpms.sh
hack/qemu-mshv/qemu-spec/: 0001-Initial-redhat-build.patch  0003-Machine-type-related-general-changes.patch  0006-Adapt-versioned-machine-type-macros-for-RHEL.patch  0008-Add-downstream-aarch64-versioned-virt-machine-types.patch  0010-Add-downstream-s390x-versioned-s390-ccw-virtio-machi.patch  0015-Add-support-statement-to-help-output.patch  0016-Use-qemu-kvm-in-documentation-instead-of-qemu-system.patch  0018-redhat-allow-5-level-paging-for-TDX-VMs.patch  0020-Revert-hw-s390x-s390-virtio-ccw-Remove-the-deprecate.patch  0021-Revert-hw-s390x-s390-virtio-ccw-Remove-the-deprecate.patch  0022-Revert-hw-s390x-s390-virtio-ccw-Remove-the-deprecate.patch  0023-redhat-Fix-rhel7.6.0-machine-type.patch  0027-arm-rhel-machine-type-compat-fix.patch  0028-target-i386-add-compatibility-property-for-arch_capa.patch  0029-target-i386-add-compatibility-property-for-pdcm-feat.patch  0030-arm-create-new-virt-machine-type-for-rhel-9.8.patch  kvm-accel-mshv-Add-vCPU-creation-and-execution-loop.patch  kvm-accel-mshv-Add-vCPU-signal-handling.patch  kvm-block-Expose-block-limits-for-images-in-QMP.patch  kvm-block-Fix-BDS-use-after-free-during-shutdown.patch  kvm-block-Improve-comments-in-BlockLimits.patch  kvm-block-Never-drop-BLOCK_IO_ERROR-with-action-stop-for.patch  kvm-block-io-Take-reqs_lock-for-tracked_requests.patch  kvm-curl-Fix-coroutine-waking.patch  kvm-docs-Add-mshv-to-documentation.patch  kvm-docs-add-SCSI-migrate-pr-documentation.patch  kvm-hw-intc-ioapic-Fix-ACCEL_KERNEL_GSI_IRQFD_POSSIBLE-t.patch  kvm-hw-s390x-Fix-a-possible-crash-with-passed-through-vi.patch  kvm-include-hw-hyperv-Add-MSHV-ABI-header-definitions.patch  kvm-io-fix-use-after-free-in-websocket-handshake-code.patch  kvm-linux-headers-linux-Add-mshv.h-headers.patch  kvm-monitor-generalize-query-mshv-info-mshv-to-query-acc.patch  kvm-q35-increase-default-tseg-size.patch  kvm-qapi-accel-Allow-to-query-mshv-capabilities.patch  kvm-qcow2-Fix-cache_clean_timer.patch  kvm-qemu-img-info-Add-cache-mode-option.patch  (+18 more)
mshv-testing/: failure-categories.txt  junit.functest.xml.111025  junit.functest.xml.111025.testing  junit.functest.xml.tagged  run-test.sh
mshv-testing/util-scripts/: launcher-describe  launcher-logs  launcher-yaml  vmi-describe  vmi-yaml
pkg/capabilities/: init.go
pkg/hypervisor/: BUILD.bazel  domain-builder-factory.go  hyperv-layered.go  hypervisor-kvm.go  hypervisor-mshv-l1vh.go  hypervisor.go  hypervisor_test.go  hypervisornodeinformation.go  kvm.go  launcherhypervisorresources.go  launcherhypervisorresources_test.go  launcherresourcerenderer.go  launcherresourcerenderer_test.go  virt-runtime.go
pkg/service/: BUILD.bazel  service.go
pkg/virt-api/: BUILD.bazel  api.go
pkg/virt-api/webhooks/validating-webhook/admitters/arch/: BUILD.bazel  amd64.go  arch-validator.go  arch-validator_test.go  arm64.go  s390x.go
pkg/virt-api/webhooks/validating-webhook/admitters/hypervisor/: BUILD.bazel  validator.go
pkg/virt-api/webhooks/validating-webhook/admitters/hypervisor/base/: BUILD.bazel  base-validator.go  base-validator_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/hypervisor/kvm/: BUILD.bazel  kvm.go
pkg/virt-api/webhooks/validating-webhook/admitters/hypervisor/mshv/: BUILD.bazel  mshv.go
pkg/virt-api/webhooks/validating-webhook/admitters/util/: BUILD.bazel  validate-k8s-utils.go
pkg/virt-config/: configuration.go  configuration_test.go  feature-gates.go  virt-config.go
pkg/virt-handler/: BUILD.bazel  controller.go  migration-source.go  migration-target.go  migration-target_test.go  realtime.go  vm.go  vm_test.go
pkg/virt-handler/virt-runtime/: BUILD.bazel  kvm-runtime.go  process.go  process_test.go  realtime_test.go  setsched.go  util.go  virt-runtime.go
pkg/virt-operator/: kubevirt_test.go
pkg/virtctl/: BUILD.bazel  root_test.go
rpm/: BUILD.bazel
specs/: kubevirt-constitution.md
specs/001-hyperv-l1vh/: code-analysis.md  feature-spec.md  implementation-plan.md  tasks.md
specs/002-add-a-metric/: component-integration.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/templates/: implementation-plan-template.md
tests/: BUILD.bazel  container_disk_test.go  hypervisor_metric_test.go  hypervlayered_test.go  pool_test.go  vmi_configuration_test.go  vmi_kernel_boot_test.go  vmi_lifecycle_test.go
tests/compute/: console.go  vm_lifecycle.go
tests/decorators/: decorators.go
tests/flags/: flags.go
tests/infrastructure/: node-labeller.go
tests/libnode/: BUILD.bazel  node.go
tests/migration/: migration.go  recovery.go
tests/operator/: BUILD.bazel  operator.go
tests/testsuite/: BUILD.bazel  fixture.go  kubevirtresource.go
tools/resource-generator/: resource-generator.go
tools/util/: BUILD.bazel  marshaller_test.go
tools/vms-generator/: BUILD.bazel  vms-generator.go
(+165 files in other folders)
