load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "kvm-runtime.go",
        "process.go",
        "setsched.go",
        "virt-runtime.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-handler/virt-runtime",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util:go_default_library",
        "//pkg/util/hardware:go_default_library",
        "//pkg/virt-controller/services:go_default_library",
        "//pkg/virt-handler/cgroup:go_default_library",
        "//pkg/virt-handler/isolation:go_default_library",
        "//pkg/virt-launcher/virtwrap/api:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/log:go_default_library",
        "//vendor/github.com/mitchellh/go-ps:go_default_library",
        "//vendor/golang.org/x/sys/unix:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "process_test.go",
        "realtime_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//vendor/github.com/mitchellh/go-ps:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
