load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "amd64.go",
        "arch-validator.go",
        "arm64.go",
        "s390x.go",
    ],
    importpath = "kubevirt.io/kubevirt/pkg/virt-api/webhooks/validating-webhook/admitters/arch",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virt-config:go_default_library",
        "//pkg/virt-config/featuregate:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["arch-validator_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/pointer:go_default_library",
        "//pkg/testutils:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//staging/src/kubevirt.io/client-go/api:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)
