load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["base-validator.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virt-api/webhooks/validating-webhook/admitters/hypervisor/base",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/downwardmetrics:go_default_library",
        "//pkg/storage/admitters:go_default_library",
        "//pkg/storage/reservation:go_default_library",
        "//pkg/storage/types:go_default_library",
        "//pkg/storage/utils:go_default_library",
        "//pkg/util/hardware:go_default_library",
        "//pkg/util/webhooks:go_default_library",
        "//pkg/virt-api/webhooks:go_default_library",
        "//pkg/virt-api/webhooks/validating-webhook/admitters/util:go_default_library",
        "//pkg/virt-config:go_default_library",
        "//pkg/virt-config/featuregate:go_default_library",
        "//staging/src/kubevirt.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/api/admission/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)
